RESOLVED FIXED275574
Invalid IPC from RemoteScrollingCoordinator with empty ScrollingNodeID
https://bugs.webkit.org/show_bug.cgi?id=275574
Summary Invalid IPC from RemoteScrollingCoordinator with empty ScrollingNodeID
Nikos Mouchtaris
Reported 2024-06-17 11:15:45 PDT
Invalid IPC from RemoteScrollingCoordinator with empty ScrollingNodeID
Attachments
Nikos Mouchtaris
Comment 1 2024-06-17 11:16:28 PDT
Nikos Mouchtaris
Comment 2 2024-06-17 11:18:00 PDT
EWS
Comment 3 2024-06-18 16:29:25 PDT
Committed 280143@main (0806b90dc5f6): <https://commits.webkit.org/280143@main> Reviewed commits have been landed. Closing PR #29902 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.