Invalid IPC from RemoteScrollingCoordinator with empty ScrollingNodeID https://bugs.webkit.org/show_bug.cgi?id=275574 rdar://130011125

Reviewed by Charlie Wolfe.

When the root scrolling node is null we can ipc an empty scrolling node which
is invalid. Add a check before sending the ipc.

* Source/WebKit/UIProcess/RemoteLayerTree/RemoteScrollingCoordinatorProxy.cpp:
(WebKit::RemoteScrollingCoordinatorProxy::deferWheelEventTestCompletionForReason):
(WebKit::RemoteScrollingCoordinatorProxy::removeWheelEventTestCompletionDeferralForReason):

Canonical link: https://commits.webkit.org/280143@main